--- a/NoDecentDiary/Pages/PageUser.razor
+++ b/NoDecentDiary/Pages/PageUser.razor
@@ -28,7 +28,7 @@
                 </MListItemContent>
 
                 <MListItemAction>
-                    <MAvatar Size="32" Tile>
+                    <MAvatar Rounded="@("lg")" Size="32">
                         <MImage Src="@Avatar"></MImage>
                     </MAvatar>
                     <MIcon>mdi-chevron-right</MIcon>
