--- a/NoDecentDiary/Pages/PageUser.razor
+++ b/NoDecentDiary/Pages/PageUser.razor
@@ -103,7 +103,7 @@
             <MListItem OnClick="OnPickPhoto">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-image-multiple
+                        mdi-image-multiple-outline
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
