--- a/NoDecentDiary/Shared/DiaryCard.razor
+++ b/NoDecentDiary/Shared/DiaryCard.razor
@@ -59,7 +59,7 @@
                             </MListItem>
                             <MListItem Dense>
                                 <MListItemContent>
-                                    @(I18n!.T("Export") + "（txt、json、pdf）")
+                                    @(I18n!.T("Diary.Export") + "（txt、json、pdf）")
                                 </MListItemContent>
                             </MListItem>
                         </MList>
