feat: add PageAbout

--- a/NoDecentDiary/Pages/PageMine.razor
+++ b/NoDecentDiary/Pages/PageMine.razor
@@ -209,7 +209,7 @@
 
             <MDivider Class="mx-3 mx-sm-0"></MDivider>
 
-            <MListItem>
+            <MListItem OnClick="NavigateToAbout">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-information-outline
