--- a/NoDecentDiary/Components/InputTag.razor
+++ b/NoDecentDiary/Components/InputTag.razor
@@ -1,4 +1,6 @@
-﻿<MDialog Value="Value"
+﻿@inherits MyComponentBase
+
+<MDialog Value="Value"
          ValueChanged="InternalValueChanged"
          MaxWidth="420">
     <MCard>
