--- a/NoDecentDiary/Components/TagCard.razor
+++ b/NoDecentDiary/Components/TagCard.razor
@@ -1,4 +1,6 @@
-﻿<MCard Class="mb-5 tag-card"
+﻿@inherits MyComponentBase
+
+<MCard Class="mb-5 tag-card"
        Ripple="false"
        Rounded="@("lg")"
        OnClick="OnClick">
