--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -1,9 +1,10 @@
-﻿@page "/About"
+﻿@page "/about"
+@inherits PageComponentBase
 
 <MAppBar App
          Color="white"
          Elevation="0">
-    <MButton Icon OnClick="HandOnBack">
+    <MButton Icon OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
