--- a/NoDecentDiary/Pages/LogPage.razor
+++ b/NoDecentDiary/Pages/LogPage.razor
@@ -1,11 +1,11 @@
-﻿@page "/Log"
-
+﻿@page "/log"
+@inherits PageComponentBase
 
 <MAppBar App
          ElevateOnScroll
          Color="white"
          ScrollTarget="#scrolling-log">
-    <MButton Icon OnClick="HandOnBack">
+    <MButton Icon OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
