--- a/NoDecentDiary/Components/DiaryCard.razor
+++ b/NoDecentDiary/Components/DiaryCard.razor
@@ -1,4 +1,5 @@
-﻿<MCard Elevation="4"
+﻿@inherits MyComponentBase
+<MCard Elevation="4"
        Rounded="@("lg")"
        Class="@("my-5 " + Class)"
        OnClick="OnClick"
@@ -12,7 +13,7 @@
             </div>
         </MListItemContent>
         <MListItemAction>
-            @if (Top)
+            @if (IsTop)
             {
                 <MIcon>
                     mdi-format-vertical-align-top
@@ -54,7 +55,7 @@
                             <MListItem Dense
                                        OnClick="OnTopping">
                                 <MListItemContent>
-                                    @(Top ? I18n!.T("Diary.CancelTop") : I18n!.T("Diary.Top"))
+                                    @(IsTop ? I18n!.T("Diary.CancelTop") : I18n!.T("Diary.Top"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense>
