--- a/NoDecentDiary/Components/SwiperTabItem.razor
+++ b/NoDecentDiary/Components/SwiperTabItem.razor
@@ -6,22 +6,24 @@
 
 @code {
     [Inject]
-    public MasaBlazor? MasaBlazor { get; set; }
+    public MasaBlazor MasaBlazor { get; set; } = default!;
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
-    private double Height => MasaBlazor!.Breakpoint.Height - MasaBlazor.Application.Top - MasaBlazor.Application.Bottom;
     public void Dispose()
     {
-        MasaBlazor!.Breakpoint.OnUpdate -= InvokeStateHasChangedAsync;
+        MasaBlazor.Breakpoint.OnUpdate -= InvokeStateHasChangedAsync;
         GC.SuppressFinalize(this);
     }
 
     protected override Task OnInitializedAsync()
     {
-        MasaBlazor!.Breakpoint.OnUpdate += InvokeStateHasChangedAsync;
+        MasaBlazor.Breakpoint.OnUpdate += InvokeStateHasChangedAsync;
         return base.OnInitializedAsync();
     }
+
+    private double Height => MasaBlazor.Breakpoint.Height - MasaBlazor.Application.Top - MasaBlazor.Application.Bottom;
+
     private async Task InvokeStateHasChangedAsync()
     {
         await InvokeAsync(StateHasChanged);
