feat(AboutPage): add display app version

--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -31,7 +31,7 @@
                         @(I18n!.T("AppName"))
                     </MListItemTitle>
                     <MListItemSubtitle>
-                        version 1.2.4
+                        version @(SystemService.GetAppVersion())
                     </MListItemSubtitle>
                 </MListItemContent>
             </MListItem>
